GNOME Bugzilla – Bug 784608
missing "nothing found" message when search for a project
Last modified: 2017-07-11 20:37:28 UTC
How to reproduce: launch Builder and on the first window that open (Select a project) make a search that doesn't have a match with existing project actual behaviour: nothing is displayed expected behaviour: show a message that say that nothing was found.
Seems reasonable
Created attachment 355342 [details] [review] Show 'no projects found' if there is no searchresult
Review of attachment 355342 [details] [review]: If you set "vexpand" to true and "valign" to center does the empty state get placed in the middle? I think that would be preferred if possible. Other than that, looks good!
Created attachment 355356 [details] [review] Changed positioning of 'no projects' Added your suggestion. If the screen is fullscreen it feels a little bit weird (only subjective feeling)
Looks good, thanks!