greeter: show 'no projects found' if search led to empty projects

there is a empty screen if the search pattern is in no project.
This patch shows a 'no projects found' screen for clarification.

https://bugzilla.gnome.org/show_bug.cgi?id=784608

Signed-off-by: Günther Wutz <info@gunibert.de>